--- a/about.html
+++ b/about.html
@@ -57,15 +57,62 @@
 
                     <div class="nav-parent w-full ml-35">
                         <ul class="nav-list flex justify-between w-full">
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="index.html">Home</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm active"><a href="about.html">About&nbsp;Us</a>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive">
+                                <a href="index.html">
+                                    <span class="translate" data-en="Home" data-id="Beranda">
+                                        Home
+                                    </span>
+                                </a>
                             </li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a
-                                    href="contact.html">Contact&nbsp;Us</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a
-                                    href="destinations.html">Destinations</a></li>
+                            <li class="px-[10px] py-[6px] lg:text-sm active">
+                                <a href="about.html">
+                                    <span class="translate" data-en="About&nbsp;us" data-id="Tentang&nbsp;kami">
+                                        About&nbsp;us
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive">
+                                <a href="contact.html">
+                                    <span class="translate" data-en="Contact&nbsp;us" data-id="Hubungi&nbsp;kami">
+                                        Contact&nbsp;Us
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="px-[10px] py-[6px] lg:text-sm inactive">
+                                <a href="destinations.html">
+                                    <span class="translate" data-en="Destinations" data-id="Destinasi">
+                                        Destinations</span>
+                                </a>
+                            </li>
                             <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="faq.html">FAQ</a></li>
-                            <li class="px-[10px] py-[6px] lg:text-sm inactive"><a href="#">Lang</a></li>
+                            <li class="px-[10px] py-[0px] inactive flex items-center justify-center">
+                                <div class="relative inline-block text-left lang-container">
+                                    <button class="lang-btn flex items-center justify-center gap-2">
+                                        <img class="selected-flag w-7 h-7" src="images/id.png" alt="ID">
+                                        <span class="iconify text-gray-500">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21"
+                                                viewBox="0 0 24 24">
+                                                <path fill="currentColor"
+                                                    d="M18.53 9.53a.75.75 0 0 0 0-1.06H5.47a.75.75 0 0 0 0 1.06l6 6a.75.75 0 0 0 1.06 0z" />
+                                            </svg>
+                                        </span>
+                                    </button>
+
+                                    <div
+                                        class="lang-menu hidden absolute right-0 mt-3 w-40 bg-white rounded-xl shadow-xl border border-gray-200 transform scale-95 opacity-0 transition-all origin-top-right">
+                                        <button data-lang="id"
+                                            class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-t-xl">
+                                            <img src="images/id.png" alt="Indonesia" class="w-6 h-6">
+                                            <span class="text-sm text-gray-700">Indonesia</span>
+                                        </button>
+                                        <button data-lang="en"
+                                            class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-b-xl">
+                                            <img src="images/uk.png" alt="English" class="w-6 h-6">
+                                            <span class="text-sm text-gray-700">English</span>
+                                        </button>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -79,7 +126,33 @@
                     <li><a href="contact.html" class="block text-gray-700">Contact Us</a></li>
                     <li><a href="destinations.html" class="block text-gray-700">Destinations</a></li>
                     <li><a href="faq.html" class="block text-gray-700">FAQ</a></li>
-                    <li><a href="#" class="block text-gray-700">Lang</a></li>
+                    <li>
+                        <div class="relative inline-block text-left lang-container">
+                            <button class="lang-btn flex items-center justify-center gap-2">
+                                <img class="selected-flag w-7 h-7" src="images/id.png" alt="ID">
+                                <span class="iconify text-gray-500">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 24 24">
+                                        <path fill="currentColor"
+                                            d="M18.53 9.53a.75.75 0 0 0 0-1.06H5.47a.75.75 0 0 0 0 1.06l6 6a.75.75 0 0 0 1.06 0z" />
+                                    </svg>
+                                </span>
+                            </button>
+
+                            <div
+                                class="lang-menu hidden absolute left-22 bottom-0 w-40 bg-white rounded-xl shadow-xl border border-gray-200 transform scale-95 opacity-0 transition-all origin-top-right">
+                                <button data-lang="id"
+                                    class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-t-xl">
+                                    <img src="images/id.png" alt="Indonesia" class="w-6 h-6">
+                                    <span class="text-sm text-gray-700">Indonesia</span>
+                                </button>
+                                <button data-lang="en"
+                                    class="lang-option w-full flex items-center gap-2 py-2 px-4 hover:bg-gray-100 rounded-b-xl">
+                                    <img src="images/uk.png" alt="English" class="w-6 h-6">
+                                    <span class="text-sm text-gray-700">English</span>
+                                </button>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -99,38 +172,51 @@
                         class="rounded-lg w-full md:h-auto object-cover">
                 </div>
                 <div class="md:w-full lg:w-1/2 h-1/2">
-                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed">
-                        Welcome to <strong class="text-[var(--primary-color)]">Ajik Bali Travel!</strong> We are a
+                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed translate" data-en="Welcome to Ajik Bali Transport! We are a
+                        travel agent dedicated to providing a comfortable, safe,
+                        and enjoyable travel experience for every guest. With our experienced team, we are ready to be
+                        your trusted partner in exploring various destinations of your choice."
+                        data-id="Selamat datang di Ajik Bali Transport! Kami adalah agen perjalanan yang berdedikasi untuk memberikan pengalaman perjalanan yang nyaman, aman, dan menyenangkan bagi setiap tamu. Dengan tim berpengalaman kami, kami siap menjadi mitra terpercaya Anda dalam menjelajahi berbagai destinasi pilihan Anda.">
+                        Welcome to Ajik Bali Transport! We are a
                         travel agent dedicated to providing a comfortable, safe,
                         and enjoyable travel experience for every guest. With our experienced team, we are ready to be
                         your trusted partner in exploring various destinations of your choice.
                     </p>
-                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed">
+                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed translate" data-en="We understand that every journey has its own story and unique needs. That’s why we offer full
+                        flexibility for guests to choose their favorite travel destinations. Our job is to ensure you
+                        reach your destination comfortably, on time, and without any hassle. From pick-up to drop-off,
+                        we are committed to delivering the best service for your trip." data-id="Kami memahami bahwa setiap perjalanan memiliki kisah dan kebutuhan uniknya masing-masing. Itulah sebabnya kami menawarkan fleksibilitas penuh
+                        bagi para tamu untuk memilih destinasi wisata favorit mereka. Tugas kami adalah memastikan Anda
+                        mencapai tujuan dengan nyaman, tepat waktu, dan tanpa repot. Dari penjemputan hingga pengantaran,
+                        kami berkomitmen untuk memberikan layanan terbaik untuk perjalanan Anda.">
                         We understand that every journey has its own story and unique needs. That’s why we offer full
                         flexibility for guests to choose their favorite travel destinations. Our job is to ensure you
                         reach your destination comfortably, on time, and without any hassle. From pick-up to drop-off,
                         we are committed to delivering the best service for your trip.
                     </p>
-                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed">
+                    <p class="text-sm md:text-base text-gray-600 mb-6 leading-relaxed translate" data-en="Booking your trip with us is easy and fast. Simply contact us via WhatsApp, and our team will
+                        immediately assist you in arranging your travel schedule just the way you want it. No queues, no
+                        complications just one click, and your journey begins with us."
+                        data-id="Memesan perjalanan Anda bersama kami mudah dan cepat. Cukup hubungi kami melalui WhatsApp, dan tim kami akan segera membantu Anda mengatur jadwal perjalanan sesuai keinginan. Tanpa antrean, tanpa kerumitan cukup satu klik, dan perjalanan Anda dimulai bersama kami.">
                         Booking your trip with us is easy and fast. Simply contact us via WhatsApp, and our team will
                         immediately assist you in arranging your travel schedule just the way you want it. No queues, no
-                        complications — just one click, and your journey begins with us.
+                        complications just one click, and your journey begins with us.
                     </p>
                     <div class="flex justify-between text-center mt-10">
                         <div>
                             <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]"
                                 data-target="8">0</div>
-                            <div class="text-sm md:text-base text-gray-500">Years Experience</div>
+                            <div class="text-sm md:text-base text-gray-500 translate" data-en="Years experience" data-id="Pengalaman bertahun-tahun">Years Experience</div>
                         </div>
                         <div>
                             <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]"
                                 data-target="900">0</div>
-                            <div class="text-sm md:text-base text-gray-500">Destinations Served</div>
+                            <div class="text-sm md:text-base text-gray-500 translate" data-id="Tujuan dilayani" data-en="Destinations served">Destinations Served</div>
                         </div>
                         <div>
                             <div class="counter text-2xl md:text-3xl font-bold text-[var(--primary-color)]"
                                 data-target="1000">0</div>
-                            <div class="text-sm md:text-base text-gray-500">Satisfied Clients</div>
+                            <div class="text-sm md:text-base text-gray-500 translate" data-en="Satisfied clients" data-id="Pelanggan puas">Satisfied Clients</div>
                         </div>
                     </div>
                 </div>
@@ -142,9 +228,9 @@
     <section class="mt-22 md:mt-22 lg:mt-25">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <div class="text-center mb-16">
-                <h2 class="text-3xl font-semibold mb-4">Key person</h2>
+                <h2 class="text-3xl font-semibold mb-4 translate" data-en="Key person" data-id="Orang paling berpengaruh">Key person</h2>
                 <div class="w-15 h-[2px] md:h-[3px] lg:w-20 lg:h-1 bg-[var(--secondary-color)] mx-auto"></div>
-                <p class="text-gray-600 max-w-2xl mx-auto mt-4">The brilliant minds behind our success</p>
+                <p class="text-gray-600 max-w-2xl mx-auto mt-4 translate" data-en="The brilliant persons behind our success" data-id="Orang-orang hebat dibalik kesuksesan kami">The brilliant persons behind our success</p>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 mx-auto w-full">
@@ -158,9 +244,8 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-1">Person 1</h3>
-                        <p class="text-blue-600 mb-4">CEO & Founder</p>
-                        <p class="text-gray-600 text-sm">Visionary leader with 15+ years in tech industry. Loves hiking
-                            and robotics.</p>
+                        <p class="text-blue-600 mb-4 translate" data-id="Pengemudi berpengalaman" data-en="Experienced driver">CEO & Founder</p>
+                        <p class="text-gray-600 text-sm translate" data-en="Experienced driver for more than 10 years!" data-id="Pengemudi berpengalaman selama lebih dari 10 tahun.">Experienced driver for more that 10 years!</p>
                         <div class="flex mt-4 space-x-3">
                             <a href="#">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" class="h-6 w-6">
@@ -184,9 +269,8 @@
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-1">Person 2</h3>
-                        <p class="text-blue-600 mb-4">CTO</p>
-                        <p class="text-gray-600 text-sm">Tech wizard with expertise in AI and cloud computing. Amateur
-                            photographer.</p>
+                        <p class="text-blue-600 mb-4">Operator</p>
+                        <p class="text-gray-600 text-sm translate" data-id="Operator yang menerima dan memperoses pesanan anda!" data-en="The operator who receives and processes your order!">The operator who receives and processes your order!</p>
                         <div class="flex mt-4 space-x-3">
                             <a href="#">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" class="h-6 w-6">
@@ -239,34 +323,39 @@
                     <img src="images/logo.svg" alt="" class="w-40 md:w-40 mb-4 lg:w-52">
                 </div>
                 <div class="sections">
-                    <h2 class="font-semibold text-xl">Pages</h1>
+                    <h2 class="font-semibold text-xl translate" data-id="Halaman" data-en="Pages">Pages</h1>
                         <div class="items flex flex-col gap-2 mt-2">
                             <a href="index.html"
-                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
+                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer translate"
+                                data-id="Beranda" data-en="Home">
                                 Home</a>
                             <a href="contact.html"
-                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
+                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer translate"
+                                data-id="Hubungi kami" data-en="Contact Us">
                                 Contact Us</a>
                             <a href="about.html"
-                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
+                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer translate"
+                                data-id="Tentang kami" data-en="About us">
                                 About Us</a>
                             <a href="destinations.html"
-                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
+                                class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer translate"
+                                data-id="Destinasi" data-en="Destinations">
                                 Destinations</a>
                             <a href="faq.html"
                                 class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
-                                Help</a>
+                                FAQ</a>
                         </div>
                 </div>
                 <div class="sections w-auto">
-                    <h2 class="font-semibold text-xl">Contact</h2>
+                    <h2 class="font-semibold text-xl translate" data-en="Contact" data-id="Kontak">Contact</h2>
                     <div class="items flex flex-col gap-2 mt-2">
                         <p
                             class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
                             ajikbalitransport@gmail.com</p>
-                        <p
+                        <a href="https://wa.link/pyyvgc"
                             class="text-gray-700 transition-all duration-300 ease-in-out hover:translate-x-2 transition-transform cursor-pointer">
-                            +62 812-3456-7890</p>
+                            +62 857-9219-4952
+                        </a>
                     </div>
                 </div>
             </div>
